Bottom section aligned correctly, working on the header

--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,7 @@ border: 0;
 font-size: 100%;  
 font: inherit;  
 vertical-align: baseline;  
+border: solid grey 1px;
 }
 /*GENERAL STYLES*/
 html{
@@ -133,4 +134,27 @@ button:hover{
 }
 .artist img{
     width:100%;
+}
+
+@media(max-width:500px){
+    .title-container div{
+        width: 100%;
+    }
+    .header{
+        width:100%;
+        justify-content: center;
+    }
+    .nav{
+        width: 100%;
+        justify-content: space-between;
+    }
+    .artists-container{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+    .artist{
+        width: 80%;
+    }
 }
